@@ -1,0 +1,13 @@
+package test.reports.issue3038;
+
+import org.testng.annotations.BeforeMethod;
+import org.testng.annotations.Test;
+
+public class AnotherTestCaseSample {
+
+  @BeforeMethod
+  public void beforeMethod() {}
+
+  @Test
+  public void testHello() {}
+}
